// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioPropertyRow renders at-risk 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--at-risk"
    >
      AT RISK
    </div>
    <a
      className="portfolio-property-row__link"
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPropertyRow renders off-track 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--off-track"
    >
      OFF TRACK
    </div>
    <a
      className="portfolio-property-row__link"
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPropertyRow renders on-track 1`] = `
<div
  className="portfolio-property-row"
>
  <div
    className="portfolio-property-row__image"
    style={
      Object {
        "backgroundImage": "url(\\"https://www.hillsdale.edu/wp-content/uploads/2016/05/Monument-Valley-800x800.jpg\\")",
      }
    }
  />
  <div
    className="portfolio-property-row__title"
  >
    <div
      className="portfolio-property-row__name"
    >
      Tara
    </div>
    <div
      className="portfolio-property-row__address"
    >
      San Antonio, TX 78209
    </div>
  </div>
  <div
    className="portfolio-property-row__info"
  >
    <div
      className="property-status portfolio-property-row__health property-status--on-track"
    >
      ON TRACK
    </div>
    <a
      className="portfolio-property-row__link"
    >
      View Property
    </a>
  </div>
  <div
    className="portfolio-property-row__kpis"
  >
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        90%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 90%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        80%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 80%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        10%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 10%
      </div>
    </div>
    <div
      className="portfolio-property-row__kpi"
    >
      <div
        className="portfolio-property-row__value"
      >
        50%
      </div>
      <div
        className="portfolio-property-row__target"
      >
        Target: 50%
      </div>
    </div>
  </div>
</div>
`;
